updated user-management code with admin dashboard's setting logic